add user info : country
country are stored with their 2 letter code and displayed by their
localized name
user info is not required

--- a/lib/comment-card/styles.styl
+++ b/lib/comment-card/styles.styl
@@ -34,7 +34,7 @@
     .comment-action
       margin-top 3px
       display none
-    small.ago
+    small.ago, small.country
       margin-left: 10px
 
   .media-body
