--- a/lib/settings-profile/styles.styl
+++ b/lib/settings-profile/styles.styl
@@ -1,4 +1,14 @@
 #profile-wrapper form .form-group
+
+  .twitter-typeahead
+    width 100%
+
+    .panel
+      width 100%
+
+      .panel-body
+        padding 10px 15px
+
   span.error
     top 40px
 
