--- a/lib/comments-replies/comments-reply.jade
+++ b/lib/comments-replies/comments-reply.jade
@@ -16,6 +16,8 @@ li.media.reply-item(data-id=reply.id, data-comment-id=comment.id)
             a.comment-action.link-edit.btn-reply-edit(href="#", title=t('comments.edit.argument'))
               i.icon-pencil
       | #{reply.author.fullName}
+      - if ( reply.author.country )
+        small.country #{t( 'country.' + reply.author.country )} 
       small.ago(data-time=(reply.createdAt ? reply.createdAt.toString() : new Date()))
       - if (reply.editedAt)
         small.edited · #{t('comments.edited')}
