--- a/lib/signup/styles.styl
+++ b/lib/signup/styles.styl
@@ -17,3 +17,19 @@ form
     ul
       padding 0
       list-style none
+
+    .twitter-typeahead
+      width 100%
+
+      .error
+        top 0
+        padding-top 10px
+
+      input[type="text"].error
+        padding-top 5px
+
+      .panel
+        width 100%
+
+        .panel-body
+          padding 10px 15px
