--- a/lib/proposal-article/template.jade
+++ b/lib/proposal-article/template.jade
@@ -7,7 +7,7 @@
       span #{t('proposal-article.article.alert.text')}&nbsp;&nbsp;
       a.alert-link(href=learnMore, target="_blank") #{t('proposal-article.article.alert.learn-more')}
 
-  - if( !user.country )
+  - if( user.id && !user.country )
     div.alert.alert-info.system-alert
       p #{t('settings.country-warning.message')}
       p
